--- a/ftw/htmlblock/locales/ftw.htmlblock.pot
+++ b/ftw/htmlblock/locales/ftw.htmlblock.pot
@@ -26,8 +26,23 @@ msgstr ""
 msgid "The HTML block renders HTML without escaping it."
 msgstr ""
 
+#. Default: "This HTML block is empty. Please add some content or remove the block."
+#: ./ftw/htmlblock/browser/templates/htmlblock.pt:12
+msgid "empty_htmlblock_label"
+msgstr ""
+
 #: ./ftw/htmlblock/configure.zcml:21
 msgid "ftw.htmlblock"
+msgstr ""
+
+#. Default: "The content will be rendered without being escaped."
+#: ./ftw/htmlblock/contents/htmlblock.py:28
+msgid "htmlblock_content_description"
+msgstr ""
+
+#. Default: "Content"
+#: ./ftw/htmlblock/contents/htmlblock.py:27
+msgid "htmlblock_content_label"
 msgstr ""
 
 #. Default: "Show title"
