--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 1.1.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add ftw.htmlblock portal_type translation to plone domain. [tinagerber]
 
 
 1.1.1 (2019-12-14)
