--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,7 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Remove obsolete behaviour in Plone 5 [Nachtalb]
 
 
 1.1.2 (2020-01-09)
